bundled_metadata/force-app/main/default/objects/Promotion/fields/Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_External_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store customer account for promotion assignment (replaces deprecated Store_ID__c).</description>
    <label>Account External ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotions (Account External ID)</relationshipLabel>
    <relationshipName>Promotions_Account_Ext</relationshipName>
    <type>Lookup</type>
</CustomField>