bundled_metadata/force-app/main/default/objects/Promotion/fields/Influence_Date__c.field-meta.xml
<CustomField>
    <fullName>Influence_Date__c</fullName>
    <label>Influence Date</label>
    <type>Date</type>
</CustomField>