bundled_metadata/force-app/main/default/objects/Promotion/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key Account / banner for promotion assignment (replaces deprecated Retailer__c).</description>
    <label>Key Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Key Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotions (Key Account)</relationshipLabel>
    <relationshipName>Promotions_Key_Account</relationshipName>
    <type>Lookup</type>
</CustomField>