bundled_metadata/force-app/main/default/objects/Promotion/fields/L3_Snacks_Value_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>L3_Snacks_Value_Segmentation__c</fullName>
    <description>PS snacks value segmentation; uses same global value set as Account.L3_Snacks_Value_Segmentation__c. Replaces deprecated L3_Value_Segmentation__c.</description>
    <label>PS Snacks Value Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>