bundled_metadata/force-app/main/default/objects/Promotion/fields/Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Placement_Type__c</fullName>
    <label>Placement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>