bundled_metadata/force-app/main/default/objects/Promotion/fields/Promotion_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Promotion_External_ID__c</fullName>
    <label>Promotion External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>