bundled_metadata/force-app/main/default/objects/Promotion/fields/Promotion_External_Id_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Promotion_External_Id_Sequence__c</fullName>
    <description>System-assigned sequence used with market and timestamp to populate External ID. Not for manual entry.</description>
    <displayFormat>{0000000}</displayFormat>
    <label>External ID Sequence</label>
    <startingNumber>1</startingNumber>
    <type>AutoNumber</type>
</CustomField>