bundled_metadata/force-app/main/default/objects/Promotion/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    OR(ISBLANK(StartDate), ISBLANK(EndDate)),
    &quot; &quot;,
    IF(
        AND(StartDate &gt; TODAY(), EndDate &lt; TODAY(), ISBLANK(Influence_Date__c)),
        &quot;&quot;,
        IF(
            AND(
                StartDate &lt; TODAY(),
                EndDate &lt; TODAY(),
                NOT(ISBLANK(Influence_Date__c)),
                Influence_Date__c &lt; TODAY()
            ),
            &quot;Completed&quot;,
            IF(
                AND(
                    StartDate &lt;= TODAY(),
                    EndDate &gt;= TODAY(),
                    NOT(ISBLANK(Influence_Date__c)),
                    Influence_Date__c &lt; TODAY()
                ),
                &quot;Active&quot;,
                IF(
                    AND(
                        StartDate &gt; TODAY(),
                        EndDate &gt; TODAY(),
                        NOT(ISBLANK(Influence_Date__c)),
                        Influence_Date__c &gt; TODAY()
                    ),
                    &quot;New&quot;,
                    IF(
                        AND(
                            StartDate &gt; TODAY(),
                            EndDate &gt; TODAY(),
                            NOT(ISBLANK(Influence_Date__c)),
                            Influence_Date__c &lt;= TODAY()
                        ),
                        &quot;Upcoming&quot;,
                        IF(
                            AND(StartDate &gt; TODAY(), EndDate &lt; TODAY()),
                            &quot;&quot;,
                            IF(
                                TODAY() &gt; EndDate,
                                &quot;Completed&quot;,
                                IF(TODAY() &lt; StartDate, &quot; &quot;, &quot;Active&quot;)
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>