bundled_metadata/force-app/main/default/objects/Promotion/validationRules/EndDateShouldBeGreaterThanStart.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateShouldBeGreaterThanStart</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(StartDate)),
    NOT(ISBLANK(EndDate)),
    EndDate &lt;= StartDate
)</errorConditionFormula>
    <errorMessage>End Date must be greater than Start Date.</errorMessage>
</ValidationRule>