bundled_metadata/force-app/main/default/objects/Promotion/validationRules/InfluenceDate_Less_Than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>InfluenceDate_Less_Than_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Influence_Date__c)),
    NOT(ISBLANK(StartDate)),
    Influence_Date__c &gt;= StartDate
)</errorConditionFormula>
    <errorMessage>Influence Date must be earlier than Start Date.</errorMessage>
</ValidationRule>