bundled_metadata/force-app/main/default/objects/Promotion/validationRules/Promotion_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Promotion_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $UserRole.DeveloperName == &apos;Back-office&apos;,
    OR(
        ISBLANK(TEXT(Promotion_Type__c)),
        ISPICKVAL(Market__c, &apos;&apos;),
        ISBLANK(StartDate),
        ISBLANK(EndDate),
        ISBLANK(Influence_Date__c)
    )
)</errorConditionFormula>
    <errorMessage>For back office users, Promotion Type, Market, Start Date, End Date, and Influence Date are required.</errorMessage>
</ValidationRule>