bundled_metadata/force-app/main/default/objects/Promotion/validationRules/Retailer_StoreID_L3Value_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Retailer_StoreID_L3Value_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $UserRole.DeveloperName == 'Back_office',
    OR(
        AND(NOT(ISBLANK(Key_Account__c)), NOT(ISBLANK(Account_External_ID__c))),
        AND(
            ISBLANK(Key_Account__c),
            ISBLANK(Account_External_ID__c),
            ISPICKVAL(L3_Snacks_Value_Segmentation__c, &quot;&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Provide Key Account or Account External ID (not both), or PS Value Segmentation Snacks only when both are blank.</errorMessage>
</ValidationRule>